NXT-71 Add right margin for keylinks to prevent issue with details button overlapping focus ring

--- a/web/src/components/SearchSections/SearchSections.module.scss
+++ b/web/src/components/SearchSections/SearchSections.module.scss
@@ -12,6 +12,7 @@
 
 .keyLink {
   margin-bottom: core.rem(core.$nds-spacing-small);
+  margin-right: core.rem(core.$nds-spacing-small);
   padding-top: core.rem(core.$nds-spacing-small);
 
   @include core.mq($from: xs) {
